--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 				</tr>
 				</thead>
 				<tbody id="orders">
-				<tr class="order">
+				<!-- <tr class="order">
 					<td>1</td>
 					<td>Lorem</td>
 					<td class="doshirak"></td>
@@ -153,7 +153,7 @@
 					<td>Lorem</td>
 					<td class="shawarma"></td>
 					<td>2020-02-14</td>
-				</tr>
+				</tr> -->
 
 
 				</tbody>
